<resources>
    <string name="app_name">10120222Latihan1</string>
    <string name="digi">DigiTeam</string>
    <string name="jabar">Jabar Digital Service</string>
    <string name="digital">Digital Together Everyone Achieve More</string>
    <string name="dias">Dias Eka Fredianto, S.Kom, B.IT</string>
    <string name="ui">UI Designer</string>
    <string name="bulan">Jam Kerja Bulan Ini</string>
    <string name="kerja">Jam kerja kamu bulan ini: 130.53 Jam</string>
    <string name="jam">130.53 JAM</string>
    <string name="batas">Batas Minimum Jam Kerja 170 jam/bulan</string>
    <string name="cek">Checkin</string>
    <string name="laporan">Laporan Kamu</string>
    <string name="maret">Maret</string>
    <string name="april">April</string>
    <string name="buat">Buat Laporan</string>
    <string name="izin">Izin</string>
    <string name="kehadiran">Kehadiran</string>
    <string name="laporan1">Laporan</string>
    <string name="agenda">Agenda</string>
    <string name="booking">Booking</string>w
    <string name="wiki">Wiki</string>
    <string name="dad">.</string>
</resources>
